--- a/login/requirements.txt
+++ b/login/requirements.txt
@@ -1,12 +1,37 @@
-django==1.8.11
+asn1crypto==0.24.0
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+cryptography==2.6.1
 dj-static==0.0.6
-pycrypto==2.6.1
-requests==2.21.0
-pymysql==0.6.7
+Django==1.8.11
+django-extensions==2.1.6
+django-sslserver==0.20
+django-werkzeug-debugger-runserver==0.3.1
+enum34==1.1.6
+gevent==1.1.2
+greenlet==0.4.15
 gunicorn==19.6.0
-#uWSGI==2.0.13.1
+gyp==0.1
+idna==2.6
+ipaddress==1.0.17
+keyring==10.6.0
+keyrings.alt==3.0
+pycparser==2.19
+pycrypto==2.6.1
+pygobject==3.26.1
+PyMySQL==0.6.7
+pyOpenSSL==19.0.0
+python-dateutil==2.6.0
+pytz==2016.6.1
+pyxdg==0.25
+requests==2.21.0
+SecretStorage==2.3.1
+six==1.11.0
+static3==0.7.0
+typing==3.6.6
+urllib3==1.24.1
+virtualenv==16.4.3
+Werkzeug==0.15.2
 xlrd==1.0.0
 xlwt==1.1.2
-gevent==1.1.2
-pytz==2016.6.1
-python-dateutil==2.6.0
